Bug #1632883 - Set modern theme alert boxes to deafualt color for improved readability
behatnotneeded

(cherry picked from commit b1d524223da82eaccd8d42bb5846b9ad84de7be2)

--- a/htdocs/theme/modern/sass/utilities/_bootstrap-variables.scss
+++ b/htdocs/theme/modern/sass/utilities/_bootstrap-variables.scss
@@ -32,21 +32,21 @@ $brand-danger:          #d9534f;
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-$state-success-text:             #FFFFFF;
-$state-success-bg:               $brand-success;
-$state-success-border:           $brand-success;
+$state-success-text:             #426600 !default;
+$state-success-bg:               mix(#426600, #fff, 20%) !default;
+$state-success-border:           darken(adjust-hue($state-success-bg, -10), 10%) !default;
 
-$state-info-text:                #FFFFFF;
-$state-info-bg:                  #3498CA;
-$state-info-border:              #3498CA;
+$state-info-text:                #31708f !default;
+$state-info-bg:                  #d9edf7 !default;
+$state-info-border:              darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
-$state-warning-text:             #8a6d3b;
-$state-warning-bg:               #F3D840;
-$state-warning-border:           $state-warning-bg;
+$state-warning-text:             #8a6d3b !default;
+$state-warning-bg:               #fcf8e3 !default;
+$state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              #FFFFFF;
-$state-danger-bg:                #CF2C33;
-$state-danger-border:            #CF2C33;
+$state-danger-text:              #a94442 !default;
+$state-danger-bg:                #f2dede !default;
+$state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 
 //== Scaffolding
